<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rehab_CoachV1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Rehab_CoachV1</string>
    <string name="title_activity_all">Rehab_CoachV1</string>

    <color name="activity1">#add8e6</color>

    <string name="plan_activity">Plan an Activity</string>
    <string name="title_activity_reminder">Rehab_CoachV1</string>
    <string name="title_section1"></string>
    <string name="title_section2">X</string>
    <string name="title_section3">X X</string>
    <string name="remember">Did you remember to:</string>

    <drawable name="activity_divider">#000000</drawable>

    <string name="str_atv_places">Search For a Destination</string>
    <string name="title">Welcome to Rehab Coach</string>
    <string name="location_prompt">Would you like to provide a destination for this activity?</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login">Login</string>
    <string name="start_activity">Start Activity</string>
    <string name="title_activity_during">Rehab_CoachV1</string>
    <string name="during_activity">This screen will be shown while an activity is going on</string>
    <string name="end_activity">End Activity</string>
    <string name="title_activity_review">Rehab_CoachV1</string>
    <string name="review">How did it go?</string>
    <string name="return_home">Return to Home Screen</string>
    <string name="rating">Enter a number 1-10</string>
    <string name="title_section4">X X X</string>
    <string name="title_section5">X X X X</string>
    <string name="title_activity_end">Rehab_CoachV1</string>
    <string name="change_theme">Change theme</string>
    <string name="help_screen">Help</string>
    <string name="home_screen">Home</string>
    <string name="profile">Profile</string>
    <string name="title_activity_help">Rehab_CoachV1</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="title_activity_profile">Rehab_CoachV1</string>
    <string name="view_goals">View Goals</string>
    <string name="change_password">Change Password</string>
    <string name="change_contact_info">Change Contact Information</string>
    <string name="change_emergency_contact_info">Change Emergency Contact Information</string>
    <string name="change_emergency_contact">Edit Emergency Contact</string>
    <string name="help_message">What do you need help with?</string>
    <string name="find_transportation">Find Transportation</string>
    <string name="lost">Get Me Home</string>
    <string name="emergency_contact">I need my Emergency Contact</string>
    <string name="call_911">Call 911</string>
    <string name="title_activity_transportation">Rehab_CoachV1</string>
    <string name="title_activity_lost">Rehab_CoachV1</string>
    <string name="title_activity_emergency_contact">Rehab_CoachV1</string>
    <string name="bus">Find nearest bus route</string>
    <string name="taxi">Call Taxi</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="load">Load</string>
    <string name="home_title">Your Activities</string>
    <string name="all_activities_title">All Activities</string>
    <string name="lost_title">You Are Here</string>
    <string name="profile_title">Profile</string>
    <string name="transportation_title">Do you need helping finding transportation?</string>
    <string name="title_activity_admin">Rehab_CoachV1</string>
    <string name="create_patient">Create New Profile</string>
    <string name="impairments">Add/Remove Impairments</string>
    <string name="activities">Add/Remove Activities</string>
    <string name="title_activity_create_profile">Rehab_CoachV1</string>
    <string name="disability1">Spinal Cord Injury</string>
    <string name="disability2">Deaf</string>
    <string name="disability3">Blind</string>
    <string name="disability4">Wheelchair</string>
    <string name="least_activity_text">You haven\'t done this in a while</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_location_selection">LocationSelectionActivity</string>
	<string name="change_taxi">Change preferred taxi company</string>
	<string name="settings">Settings</string>
	<string name="all_activities">View All Activities</string>
	<string name="your_activities">Your Activities</string>
	<string name="email_hint">Email Address</string>
	<string name="login_progress_signing_in">Signing In</string>
	<string name="admin">Admin</string>
	<string name="title_activity_login">Rehab_CoachV1</string>
	

</resources>
