<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
	
	<LinearLayout
       android:orientation="vertical" 
       android:id="@+id/line"
   	   android:layout_width="match_parent"
   	   android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

    
   <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/profile_test" />
        
    <LinearLayout
	    android:id="@+id/contact_info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:orientation="horizontal" >    
        
    <LinearLayout
	    android:id="@+id/type_line"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="15dp"
	    android:layout_weight="1.0"
	    android:orientation="vertical" >
        
    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="First Name: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="Last Name: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	<TextView
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:text="Date of Birth: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	<TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:text="Phone Number: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		        
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="Address: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	<TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="City: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	<TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="State: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	<TextView
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:text="Zipcode: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </LinearLayout>
    
    <LinearLayout
	    android:id="@+id/input_line"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_weight="1.0"
	    android:orientation="vertical" >
		
		<TextView
			android:id="@+id/first_name_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test First Name"
			android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TextView
			android:id="@+id/last_name_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test Last Name"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
		<TextView
			android:id="@+id/dob_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test DOB"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
		<TextView
			android:id="@+id/phone_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test Phone"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<TextView
			android:id="@+id/address_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test Address"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
		<TextView
			android:id="@+id/city_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test City"
			android:textAppearance="?android:attr/textAppearanceMedium" />'
			
		<TextView
			android:id="@+id/state_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test State"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
		<TextView
			android:id="@+id/zipcode_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test Zipcode"
			android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </LinearLayout>
    
    </LinearLayout> 
    
    <Button 
        android:id="@+id/change_contact_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/change_contact_info"
        android:onClick="editContact"
        /> 
        
    <TextView
        android:id="@+id/emergency_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Emergency Contact"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <LinearLayout
	    android:id="@+id/emergency_contact_info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="15dp"
	    android:orientation="horizontal" >    
        
    <LinearLayout
	    android:id="@+id/emergency_type_line"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_weight="1.0"
	    android:orientation="vertical" >
        
    <TextView
        android:id="@+id/emergency_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="First Name: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/emergency_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="Last Name: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	<TextView
        android:id="@+id/emergency_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:text="Phone Number: "
        android:textAppearance="?android:attr/textAppearanceMedium" />
		        
    
    </LinearLayout>
    
    <LinearLayout
	    android:id="@+id/emergency_input_line"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:layout_weight="1.0"
	    android:orientation="vertical" >
		
		<TextView
			android:id="@+id/emergency_first_name_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test First Name"
			android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TextView
			android:id="@+id/emergency_last_name_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test Last Name"
			android:textAppearance="?android:attr/textAppearanceMedium" />
			
			
		<TextView
			android:id="@+id/emergency_phone_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:text="Test Phone"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		
    
    </LinearLayout>
    
    </LinearLayout> 
        
    <Button 
        android:id="@+id/change_emergency_contact_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/change_emergency_contact_info"
        /> 
    
</LinearLayout> 

</ScrollView>
